--- a/register.html
+++ b/register.html
@@ -41,7 +41,7 @@
             <label id="IconError" style="color: red"></label>
             <h6>Your Icon</h6>
             <progress value="0" max="100" id="uploader">0%</progress>
-            <input type="file" value="upload" accept=".jpg" id="fileButton">
+            <input type="file" value="upload" accept=".jpg" id="fileButton" onclick="upIcon(document.getElementById('fileButton'), document.getElementById('uploader'), 'image', '')">
             <div id="imgDiv"></div>
             <img id="image" src="" alt="">
           </div>
