--- a/index.html
+++ b/index.html
@@ -173,6 +173,23 @@
     </div>
 </div>
 
+<div id="searchModal" class="modal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h2 class="modal-title">Search</h2>
+                <button id="closeSearch">&times;</button>
+            </div>
+            <div class="modal-body">
+                <input type="text" placeholder="Search key" id="search">
+            </div>
+            <div class="modal-footer">
+                <button id="searchButton" class="btn btn-primary">Search</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <div id="iconModal" class="modal">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -215,8 +232,8 @@
     </div>
 </div>
 <!--<input type="text" id="search" style="width: 500px" placeholder="Search Student">-->
-<button style="background: deepskyblue; color: brown; width: 50px" onclick="search_student()"><i class="fas fa-search"></i></button>
-<button style="background: #00ff0d; color: #ffffff; width: 50px" onclick="show_table()"><i class="fas fa-eye"></i></button>
+<button style="background: deepskyblue; color: brown; width: 50px" onclick="search_name()"><i class="fas fa-search"></i></button>
+<button style="background: #00ff0d; color: #ffffff; width: 50px" onclick="show_table(list_student)"><i class="fas fa-eye"></i></button>
 <button style="background: #ff0000; color: #ffffff; width: 50px" onclick="close_table()"><i class="fas fa-eye-slash"></i></button>
 <br>
 <br>
@@ -307,6 +324,7 @@ let style1 = "border: 1px solid black;\n" +
     "        width: 159px;\n" +
     "        color: black"
 let modal = document.getElementById('create_modal')
+let search = document.getElementById('searchModal')
 let error = document.getElementById('errorModal')
 let update = document.getElementById('update_modal')
 let deleteModal = document.getElementById('deleteModal')
@@ -315,6 +333,7 @@ let closeModalBtn = document.getElementsByClassName("close")[0]
 let closeErrorBtn = document.getElementById("closeError")
 let closeUpdateBtn = document.getElementById("closeUpdate")
 let closeIconBtn = document.getElementById('closeIcon')
+let closeSearchBtn = document.getElementById('closeSearch')
 closeModalBtn.onclick = function() {
     modal.style.display = "none";
 }
@@ -326,6 +345,9 @@ closeUpdateBtn.onclick = function () {
 }
 closeIconBtn.onclick = function () {
     icon.style.display = "none"
+}
+closeSearchBtn.onclick = function () {
+    search.style.display = "none"
 }
 function add_student() {
     modal.style.display = "block"
@@ -383,9 +405,9 @@ document.getElementById('createBtn').onclick = function() {
 document.getElementById('cancelBtn').onclick = function() {
     modal.style.display = "none"
 }
-function show_table() {
+function show_table(list) {
     table.innerHTML = ""
-    for (let i = 0; i < list_student.length; i++) {
+    for (let i = 0; i < list.length; i++) {
         if (i%2===0) {
             newRow = table.insertRow(table.rows.length)
             let cell1 = newRow.insertCell(0);
@@ -406,14 +428,14 @@ function show_table() {
             cell8.style = style1
             newRow.className="table-primary"
             console.log(list_student)
-            cell1.innerHTML = list_student[i]._stt
-            cell2.innerHTML = list_student[i]._name
-            cell3.innerHTML = '<img src="'+ list_student[i]._avatar + '" style="border-radius: 50%; width: 50px; height: 50px">'
-            cell4.innerHTML = list_student[i]._address
-            cell5.innerHTML = list_student[i]._age
-            cell6.innerHTML = '<audio id="audioControls" controls> <source id="audios" src="'+ list_student[i]._audio + '" type="audio/mpeg"> </audio>'
-            cell7.innerHTML = '<button onclick="update_student(' + list_student[i]._stt + ')" style="background: blue; color: white"><i class="fas fa-pen"></i></button>'
-            cell8.innerHTML = '<button onclick="delete_student(' + list_student[i]._stt + ')" style="background: red; color: white"><i class="fas fa-trash"></i></button>'
+            cell1.innerHTML = list[i]._stt
+            cell2.innerHTML = list[i]._name
+            cell3.innerHTML = '<img src="'+ list[i]._avatar + '" style="border-radius: 50%; width: 50px; height: 50px">'
+            cell4.innerHTML = list[i]._address
+            cell5.innerHTML = list[i]._age
+            cell6.innerHTML = '<audio id="audioControls" controls> <source id="audios" src="'+ list[i]._audio + '" type="audio/mpeg"> </audio>'
+            cell7.innerHTML = '<button onclick="update_student(' + list[i]._stt + ')" style="background: blue; color: white"><i class="fas fa-pen"></i></button>'
+            cell8.innerHTML = '<button onclick="delete_student(' + list[i]._stt + ')" style="background: red; color: white"><i class="fas fa-trash"></i></button>'
         }
         else {
             newRow = table.insertRow(table.rows.length)
@@ -434,14 +456,14 @@ function show_table() {
             cell7.style = style2
             cell8.style = style2
             newRow.className="table-danger"
-            cell1.innerHTML = list_student[i]._stt
-            cell2.innerHTML = list_student[i]._name
-            cell3.innerHTML = '<img src="'+ list_student[i]._avatar + '" style="border-radius: 50%; width: 50px; height: 50px">'
-            cell4.innerHTML = list_student[i]._address
-            cell5.innerHTML = list_student[i]._age
-            cell6.innerHTML = '<audio id="audioControls" controls> <source id="audios" src="'+ list_student[i]._audio + '" type="audio/mpeg"> </audio>'
-            cell7.innerHTML = '<button onclick="update_student(' + list_student[i]._stt + ')" style="background: blue; color: white"><i class="fas fa-pen"></i></button>'
-            cell8.innerHTML = '<button onclick="delete_student(' + list_student[i]._stt + ')" style="background: red; color: white"><i class="fas fa-trash"></i></button>'
+            cell1.innerHTML = list[i]._stt
+            cell2.innerHTML = list[i]._name
+            cell3.innerHTML = '<img src="'+ list[i]._avatar + '" style="border-radius: 50%; width: 50px; height: 50px">'
+            cell4.innerHTML = list[i]._address
+            cell5.innerHTML = list[i]._age
+            cell6.innerHTML = '<audio id="audioControls" controls> <source id="audios" src="'+ list[i]._audio + '" type="audio/mpeg"> </audio>'
+            cell7.innerHTML = '<button onclick="update_student(' + list[i]._stt + ')" style="background: blue; color: white"><i class="fas fa-pen"></i></button>'
+            cell8.innerHTML = '<button onclick="delete_student(' + list[i]._stt + ')" style="background: red; color: white"><i class="fas fa-trash"></i></button>'
         }
     }
 }
@@ -449,75 +471,33 @@ function show_table() {
 function close_table() {
     table.innerHTML = ""
 }
-// function search_name() {
-//     let search = document.getElementById('search').value.toLowerCase()
-//     let same = []
-//     for (let i = 0; i < list_student.length; i++) {
-//         if (list_student[i].name.toLowerCase().search(search) !== -1) {
-//             same.push(list_student[i])
-//         }
-//     }
-//     table.innerHTML = ""
-//     for (let t = 0; t < same.length; t++) {
-//         newRow = table.insertRow(table.rows.length)
-//         let cell1 = newRow.insertCell(0);
-//         let cell2 = newRow.insertCell(1);
-//         let cell3 = newRow.insertCell(2);
-//         let cell4 = newRow.insertCell(3);
-//         let cell5 = newRow.insertCell(4);
-//         let cell6 = newRow.insertCell(5);
-//         cell1.style = style
-//         cell2.style = style
-//         cell3.style = style
-//         cell4.style = style
-//         cell5.style = style
-//         cell6.style = style
-//         cell1.innerHTML = same[t].id
-//         cell2.innerHTML = same[t].name
-//         cell3.innerHTML = same[t].address
-//         cell4.innerHTML = same[t].age
-//         cell5.innerHTML = '<button onclick="update_student(' + list_student[i].id + ')" style="background: blue; color: white"><i class="fas fa-pen"></i></button>'
-//         cell6.innerHTML = '<button onclick="delete_student(' + list_student[i].id + ')" style="background: red; color: white"><i class="fas fa-trash"></i></button>'
-//     }
-//     document.getElementById('search').value = ""
-// }
-// function search_student() {
-//     let search = document.getElementById('search').value.toLowerCase()
-//     let same = []
-//     let count = 0
-//     for (let i = 0; i < list_student.length; i++) {
-//         let name = list_student[i].name.toLowerCase()
-//         for (let j = 0; j < search.length; j++) {
-//             for (let k = 0; k < name.length; k++) {
-//                 if (search[j] === name[k]) {
-//                     count++
-//                     break
-//                 }
-//             }
-//         }
-//         if (count === search.length) {
-//             same.push(list_student[i])
-//             count = 0
-//         }
-//     }
-//     table.innerHTML = ""
-//     for (let t = 0; t < same.length; t++) {
-//         newRow = table.insertRow(table.rows.length)
-//         let cell1 = newRow.insertCell(0);
-//         let cell2 = newRow.insertCell(1);
-//         let cell3 = newRow.insertCell(2);
-//         let cell4 = newRow.insertCell(3);
-//         cell1.style = style
-//         cell2.style = style
-//         cell3.style = style
-//         cell4.style = style
-//         cell1.innerHTML = same[t].id
-//         cell2.innerHTML = same[t].name
-//         cell3.innerHTML = '<button onclick="update_student(' + same[t].id + ')" style="background: blue; color: white">Edit</button>'
-//         cell4.innerHTML = '<button onclick="delete_student(' + same[t].id + ')" style="background: red; color: white">Delete</button>'
-//     }
-//     document.getElementById('search').value = ""
-// }
+function search_name() {
+    search.style.display = "block"
+    document.getElementById('searchButton').onclick = function () {
+        let searchKey = document.getElementById('search').value.toLowerCase()
+        let same = []
+        for (let i = 0; i < list_student.length; i++) {
+            if (list_student[i]._name.toLowerCase().search(searchKey) !== -1) {
+                same.push(list_student[i])
+                continue
+            }
+            if (list_student[i]._stt.toLowerCase().search(searchKey) !== -1) {
+                same.push(list_student[i])
+                continue
+            }
+            if (list_student[i]._address.toLowerCase().search(searchKey) !== -1) {
+                same.push(list_student[i])
+                continue
+            }
+            if (list_student[i]._age.toLowerCase().search(searchKey) !== -1) {
+                same.push(list_student[i])
+            }
+        }
+        table.innerHTML = ""
+        show_table(same)
+        document.getElementById('search').value = ""
+    }
+}
 function delete_student(id) {
     console.log(id)
     for (let i = 0; i < list_student.length; i++) {
@@ -526,7 +506,7 @@ function delete_student(id) {
             deleteModal.style.display = "block"
             document.getElementById("deleteBtn").onclick = function() {
                 list_student.splice(i, 1)
-                show_table()
+                show_table(list_student)
                 let data = JSON.stringify(list_student)
                 localStorage.setItem("data", data)
                 deleteModal.style.display = "none"
@@ -602,7 +582,7 @@ function update_student(id) {
                         list_student[i]._audio = updateAudio
                         let data = JSON.stringify(list_student)
                         localStorage.setItem("data", data)
-                        show_table()
+                        show_table(list_student)
                     }
                 }
             }
